feat: create build_xml/

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <title>StudentHack 2025</title>
 </head>
 <body>
-   <h1>Welcome to StudentHack 2025</h1>
+   <h1>Web Tester</h1>
+   <p>An app to automate your web development and testing</p>
+   <p>Feeling tired of writing your own configuration file? Get a template file or create your own file here</p>
 </body>
 </html>
