feat: update code

--- a/templates/build_xml/index.html
+++ b/templates/build_xml/index.html
@@ -84,7 +84,7 @@
         <div id="generated-xml-container">
             <h2>Generated XML</h2>
             <pre id="generated-xml"></pre>
-            <button id="download-xml-btn">Download XML</button>
+            <button id="copy-xml-btn">Copy XML</button>
         </div>
     </div>
 
