--- a/templates/build_xml/index.html
+++ b/templates/build_xml/index.html
@@ -7,78 +7,105 @@
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/build_xml/style.css') }}">
 </head>
 <body>
-    <div class="container">
+    <div class="root">
         <h1>XML Configuration Generator</h1>
-        <form id="xmlForm">
-            <div class="form-section">
-                <label for="version">Version</label>
-                <input type="text" id="version" value="1.0" placeholder="Enter version">
-            </div>
+        
+        <form id="xml-configuration-container">
+            <div id="webform-container">
+                <div id="url-container">
 
-            <div class="form-section">
-                <label for="useragents">User Agents (Comma Separated)</label>
-                <input type="text" id="useragents" value="Chrome,Edge,Firefox,Safari" placeholder="Enter user agents">
-            </div>
+                </div>
+                <div id="form-id-container">
 
-            <div id="webforms">
-                <div class="webform" id="webform-1">
-                    <h2>Webform 1</h2>
-                    <div class="form-section">
-                        <label for="url-1">URL</label>
-                        <input type="url" id="url-1" placeholder="Enter URL">
-                    </div>
-                    <div class="form-section">
-                        <label for="formid-1">Form ID</label>
-                        <input type="text" id="formid-1" placeholder="Enter form ID">
-                    </div>
-                    <div class="form-section">
-                        <label for="timeout-1">Timeout</label>
-                        <input type="number" id="timeout-1" value="60" placeholder="Enter timeout">
-                    </div>
-                    <div class="form-section">
-                        <label for="submissiontimeout-1">Submission Timeout</label>
-                        <input type="number" id="submissiontimeout-1" value="20" placeholder="Enter submission timeout">
-                    </div>
+                </div>
+                <div id="timeout-container">
 
-                    <div class="fieldset-section">
-                        <h3>Fieldset</h3>
-                        <div class="field-section" id="fieldset-1">
-                            <input type="text" placeholder="Field ID" class="field-id">
-                            <input type="text" placeholder="Field Name" class="field-name">
-                            <input type="text" placeholder="Field Type" class="field-type">
-                            <button type="button" class="remove-field-btn">Remove Field</button>
+                </div>
+                <div id="submission-timeout-container">
+
+                </div>
+                <div id="fields-container">
+                    <div id="field-container">
+                        <div id="field-id-container">
+
                         </div>
-                        <button type="button" id="add-field-btn-1">Add Field</button>
+                        <div id="field-class-container">
+
+                        </div>
+                        <div id="field-xpath-container">
+
+                        </div>
+                        <div id="field-type-container">
+
+                        </div>
+                        <div id="field-value-container">
+
+                        </div>
+                        <div id="default-index-container">
+
+                        </div>
+                        <div id="default-value-container">
+
+                        </div>
                     </div>
+                </div>
 
-                    <div class="tests-section">
-                        <h3>Tests</h3>
-                        <div class="test-section" id="test-1">
-                            <label for="test-description-1">Test Description</label>
-                            <input type="text" id="test-description-1" placeholder="Enter test description">
-                            
-                            <label for="test-language-1">Test Language</label>
-                            <input type="text" id="test-language-1" value="en" placeholder="Enter language">
+                <!-- Tests -->
+                <div id="tests-container">
+                    <div id="test-container">
+                        <div id="test-id-container">
 
-                            <div class="steps-section">
-                                <h4>Steps</h4>
-                                <div class="step-section" id="step-1">
-                                    <input type="text" placeholder="Step Access By" class="step-accessby">
-                                    <input type="text" placeholder="Step Key" class="step-key">
-                                    <input type="text" placeholder="Step Value" class="step-value">
-                                    <button type="button" class="remove-step-btn">Remove Step</button>
+                        </div>
+                        <div id="test-description-container">
+
+                        </div>
+                        <div id="test-run-container">
+
+                        </div>
+                        <div id="test-language-container">
+
+                        </div>
+                        <div id="steps-container">
+                            <div id="step-container">
+                                <div id="step-accessby-container">
+
                                 </div>
-                                <button type="button" id="add-step-btn-1">Add Step</button>
-                            </div>
+                                <div id="step-key-container">
 
-                            <button type="button" class="remove-test-btn">Remove Test</button>
+                                </div>
+                                <div id="step-action-container">
+
+                                </div>
+                                <div id="value-container">
+
+                                </div>
+                                <div id="expectation-container">
+                                    <div id="expectation-formsubmission-container">
+
+                                    </div>
+                                    <div id="message-container">
+                                        <div id="message-accessby-container">
+
+                                        </div>
+                                        <div id="message-key-container">
+
+                                        </div>
+                                        <div id="message-language-container">
+
+                                        </div>
+                                        <div id="message-type-container">
+
+                                        </div>
+                                        <div id="message-value-container">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <button type="button" id="add-test-btn-1">Add Test</button>
                     </div>
                 </div>
             </div>
-
-            <button type="submit" id="generate-xml-btn">Generate XML</button>
         </form>
 
         <div id="generated-xml-container">
