--- a/templates/test_result/index.html
+++ b/templates/test_result/index.html
@@ -183,8 +183,8 @@
           <div>
             <label>Browsers</label>
             <ul>
-              {% for browser in webform["browser"] %}
-                <li>browser</li>
+              {% for browser in webform["browsers"] %}
+                <li>{{ browser }}</li>
               {% endfor %}
             </ul>
           </div>
