--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>StudentHack 2025</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
-   <h1>Web Tester</h1>
-   <p>An app to automate your web development and testing</p>
-   <p>Feeling tired of writing your own configuration file? Get a template file <a href="./template_file/template.xml" target="_blank">here</a> or create your own file <a href="./build_xml" target="_blank">here</a></p>
-   
-   <h2>Upload XML Files</h2>
-   <form action="/run_test" method="POST" enctype="multipart/form-data">
-       <label for="files">Choose XML files:</label>
-       <input type="file" id="files" name="files" accept=".xml" multiple required>
-       <input type="submit" value="Upload">
-   </form>
-   
+    <div id="background"></div>
+    <div id="content">
+        <h1>Web Tester</h1>
+        <p>An app to automate your web development and testing</p>
+        <p>Feeling tired of writing your own configuration file? Get a template file <a href="./template_file/template.xml" target="_blank">here</a> or create your own file <a href="./build_xml" target="_blank">here</a></p>
+        
+        <h2>Upload XML Files</h2>
+        <form action="/run_test" method="POST" enctype="multipart/form-data">
+            <label for="files">Choose XML files:</label>
+            <input type="file" id="files" name="files" accept=".xml" multiple required>
+            <input type="submit" value="Upload">
+        </form>
+    </div>
+
+    <script>
+        // Setting up Three.js
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.getElementById('background').appendChild(renderer.domElement);
+
+        const geometry = new THREE.BoxGeometry(1, 1, 1);
+        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00, wireframe: true });
+        const cube = new THREE.Mesh(geometry, material);
+        scene.add(cube);
+
+        camera.position.z = 5;
+
+        function animate() {
+            requestAnimationFrame(animate);
+            cube.rotation.x += 0.01;
+            cube.rotation.y += 0.01;
+            renderer.render(scene, camera);
+        }
+
+        animate();
+    </script>
 </body>
 </html>
