--- a/templates/test_result/index.html
+++ b/templates/test_result/index.html
@@ -281,7 +281,7 @@
           <hr>
           <!-- Testing Messages -->
           <section>
-            <h3>Actual Behaviour</h3>>
+            <h3>Actual Behaviour</h3>
             <table class="test-result-table">
               <thead>
                 <tr>
