todo: fix template download

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div id="content">
         <h1>Automation Web Tester</h1>
         <p>Introducing <b>Automation Web Tester</b> - the ultimate solution to streamline and <strong>automate</strong> your web development and testing process. Say goodbye to manual configurations and repetitive tasks. With Automation Web Tester, you can effortlessly test and validate your web applications, saving time and reducing errors. Whether you're a developer, QA engineer, or team leader, our intuitive platform provides the tools you need to ensure your web projects are flawless and efficient. Get started today and boost your productivity with automated testing at your fingertips.</p>
-        <h3>View template <a target="_blank" href="./template_file">here</a></h3>
+        <h3>View template <a download="template.xml" href="./template_file/template.xml">here</a></h3>
         <h3>Generate your customised configuration file <a target="_blank" href="./build_xml">here</a></h3>
         
         <form action="/run_test" method="POST" enctype="multipart/form-data">
