--- a/templates/test_result/index.html
+++ b/templates/test_result/index.html
@@ -130,7 +130,7 @@
     <h1>Web Testing Results</h1>
   </header>
 
-  {% for (test_result) in message %}
+  {% for (test_result) in test_data %}
     <div class="container">
       <!-- Configuration Summary -->
       <section>
@@ -322,12 +322,16 @@
   <!-- Error -->
    <ul>
     <h2 style="color: red;">Error Message</h2>
-    {% for error_message in test_result["errors"] %}
-      <li>{{ error_message }}</li>
-    {% endfor %}
-   </ul>
-{% endfor %}
+      {% for error_message in test_result["errors"] %}
+        <li>{{ error_message }}</li>
+      {% endfor %}
+    </ul>
+  {% endfor %}
 
+  <hr>
+  <!-- AI advice -->
+  <h2 style="color: yellowgreen;">AI Recommendations</h2>
+  <p style="color: yellowgreen;">{{ ai_message }}</p>
 
   <footer>
     <p>&copy; StudentHack 2025. All Rights Reserved.</p>
