feat: it works!

--- a/templates/test_result/index.html
+++ b/templates/test_result/index.html
@@ -330,7 +330,7 @@
 
   <hr>
   <!-- AI advice -->
-  <h2 style="color: yellowgreen;">AI Recommendations</h2>
+  <h2 style="color: yellowgreen;">AI Feedback</h2>
   <p style="color: yellowgreen;">{{ ai_message }}</p>
 
   <footer>
