--- a/templates/build_xml/index.html
+++ b/templates/build_xml/index.html
@@ -16,11 +16,11 @@
                 <h2>Webform</h2>
                 <div id="url-container">
                     <label for="url">URL: </label>
-                    <input id="url" name="url" type="url" placeholder="www.example.com" >
+                    <input id="url" name="url" type="url" placeholder="www.example.com" required >
                 </div>
                 <div id="form-id-container">
                     <label for="form-id">Form ID: </label>
-                    <input id="form-id" name="form-id" type="text" placeholder="formID" >
+                    <input id="form-id" name="form-id" type="text" placeholder="formID" required >
                 </div>
                 <div id="timeout-container">
                     <label for="timeout">Timeout: </label>
@@ -47,11 +47,11 @@
                         </div>
                         <div id="field-type-container">
                             <label for="field-type">Field Type: </label>
-                            <input id="field-type" name="field-type" type="text" placeholder="Field type" >
+                            <input id="field-type" name="field-type" type="text" placeholder="Field type" required >
                         </div>
                         <div id="field-value-container">
                             <label for="field-value">Field Value: </label>
-                            <input id="field-value" name="field-value" type="text" placeholder="Field value" >
+                            <input id="field-value" name="field-value" type="text" placeholder="Field value" required >
                         </div>
                         <div id="default-index-container">
                             <label for="default-index">Default Index: </label>
@@ -117,7 +117,7 @@
                                         </div>
                                         <div id="message-key-container">
                                             <label for="message-key">Expected Message Access Key: </label>
-                                            <input id="message-key" name="message-key" type="text" placeholder="The access key of the expected message" >
+                                            <input id="message-key" name="message-key" type="text" placeholder="The access key of the expected message" required >
                                         </div>
                                         <div id="message-language-container">
                                             <label for="message-language">Expected Message Access Language: </label>
@@ -125,11 +125,11 @@
                                         </div>
                                         <div id="message-type-container">
                                             <label for="message-type">Expected Message Type: </label>
-                                            <input id="message-type" name="message-type" type="text" placeholder="The message type" >
+                                            <input id="message-type" name="message-type" type="text" placeholder="The message type" required >
                                         </div>
                                         <div id="message-value-container">
                                             <label for="message-value">Expected Message Value: </label>
-                                            <input id="message-value" name="message-value" type="text" placeholder="The value of the expected message" >
+                                            <input id="message-value" name="message-value" type="text" placeholder="The value of the expected message" required >
                                         </div>
                                     </div>
                                 </div>
